--- a/00HelloWorld/Helloworld.html
+++ b/00HelloWorld/Helloworld.html
@@ -7,6 +7,7 @@
             Hello World !!!
             <p>
                 <a href="http://www.lzzy.net/">柳州职业技术学院欢迎您！</a>
+                <a href="http://www.baidu.com/">百度一下，您就知道！</a>
             </p>
         </h1>
     </body>
