--- a/00HelloWorld/Helloworld.html
+++ b/00HelloWorld/Helloworld.html
@@ -8,6 +8,7 @@
             <p>
                 <a href="http://www.lzzy.net/">柳州职业技术学院欢迎您！</a>
                 <a href="http://www.baidu.com/">百度一下，您就知道！</a>
+                <a href="http://www.google.com">谷歌一下，能上您就输！</a>
             </p>
         </h1>
     </body>
