--- a/00HelloWorld/Helloworld.html
+++ b/00HelloWorld/Helloworld.html
@@ -1,15 +1,22 @@
 <html>
     <head>
-    </head>
     <meta charset="UTF-8">
+    <title>什么鬼网站</title>
+    </head>
     <body>
-        <h1>
-            Hello World !!!
-            <p>
-                <a href="http://www.lzzy.net/">柳州职业技术学院欢迎您！</a>
-                <a href="http://www.baidu.com/">百度一下，您就知道！</a>
-                <a href="http://www.google.com">谷歌一下，能上您就输！</a>
-            </p>
-        </h1>
+        <div id="container" style="width:500px">
+        <div id="header" style="background-color:FFA500;">
+        <h1 style="margin-bottom:0;">什么鬼</h1></div>
+
+        <div id="menu" style="background-color:FFD700;height:200px;width:100px;float:left">
+            <b>菜单</b><br>
+            HTML<br>
+            CSS<br>
+            JavaScript</div>
+        <div id="Content" style="background-color:#EEEEEE;height:200px;width:100px;float:left;">
+            什么鬼</div>
+            <div id="footer" style="background-color:FFA500;clear:both;text-align:center;">
+                版权@www.shenmegui.com</div>
+ </div>
     </body>
     </html>
