--- a/00HelloWorld/Helloworld.html
+++ b/00HelloWorld/Helloworld.html
@@ -1,7 +1,7 @@
 <html>
     <head>
     <meta charset="UTF-8">
-    <title>什么鬼网站</title>
+    <title>欢迎！</title>
     </head>
     <body>
         <div id="container" style="width:500px">
@@ -9,7 +9,7 @@
         <h1 style="margin-bottom:0;">什么鬼</h1></div>
 
         <div id="menu" style="background-color:FFD700;height:200px;width:100px;float:left">
-            <b>菜单</b><br>
+            <b>单菜</b><br>
             HTML<br>
             CSS<br>
             JavaScript</div>
