--- a/00HelloWorld/Helloworld.html
+++ b/00HelloWorld/Helloworld.html
@@ -14,9 +14,25 @@
             CSS<br>
             JavaScript</div>
         <div id="Content" style="background-color:#EEEEEE;height:200px;width:100px;float:left;">
-            什么鬼</div>
+            什44么鬼</div>
             <div id="footer" style="background-color:FFA500;clear:both;text-align:center;">
                 版权@www.shenmegui.com</div>
  </div>
+    </body>
+    </html>
+
+
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>Document</title>
+    </head>
+    <body>
+        <p>
+            今天天气好好喔！！！
+        </p>
     </body>
     </html>
