--- a/00HelloWorld/zuoye.html
+++ b/00HelloWorld/zuoye.html
@@ -7,23 +7,11 @@
     <title>古诗一首</title>
 </head>
 <body>
-        <h3 align="center">
-                <font color="black" size="5" face="黑体">城东早春</font>
-            </h3>
-        <h3 align="right">
-            <font color="black" size="5" ><i>作者：杨巨源</i></font>
-        </h3>
-        <h4 align="left">
-                <font color="blue" size="5" face="黑体">诗家清景在新春，</font>
-        </h4>
-        <h4 align="left">
-                <font color="black" size="5" face="黑体"><u>绿柳才黄半未均。</u></font>
-        </h4>
-        <h4 align="left">
-                <font color="blue" size="5" face="黑体">若待上林花似锦，</font>
-        </h4>
-        <h4 align="left">
-                <font color="black" size="5" face="黑体"><s>出门俱是看花人。</s></font>
-        </h4>
+        <h4 align="center">城东早春</h4>
+        <p align="right"><i>作者：杨巨源</i></p>
+        <p><font color="blue">诗家清景在新春，</p></font>
+        <p><u>绿柳才黄半未均。</u></p>
+        <p><font color="blue">若待上林花似锦，</font></p>
+        <p><s>出门俱是看花人。</s></p>
 </body>
 </html>
