--- a/00HelloWorld/demo01.html
+++ b/00HelloWorld/demo01.html
@@ -9,7 +9,7 @@
 <body>
     <h1>这是一个h5页面</h1>
     <p>
-                                                 来吧！一起来猝死吧！！！！！！！！！
+                                                 来吧！一起来通宵学习吧！！！！！！！！！
 
 
 
