--- a/My homework/9-12.html
+++ b/My homework/9-12.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h3 align="center">西游降魔篇</h3>
-    <hr align="center" size=3px color="blue" width=300px>
-    <img src="D:\Web\My homework\1.jpg" align="right" alt="西游降魔篇" width="200px" height="250px">
+    <hr align="center" size=3px color="blue" width=70%>
+    <img src="image/1.jpg" align="right" alt="西游降魔篇" width="200px" height="250px">
     <p>2013年2月10日</p>
     <p>导演：周星驰</p>
     <p>主演：黄渤 文章 舒淇 周秀娜 释行宇 周志祥 何文辉 李尚正</p>
@@ -19,7 +19,7 @@
     <br>
     <h3 align="center">101次求婚</h3>
     <hr align="center" size=1px>
-    <img src="D:\Web\My homework\2.jpg" align="right" alt="101次求婚" width="200px" height="250px">
+    <img src="image/2.jpg" align="right" alt="101次求婚" width="200px" height="250px">
     <p>导演：陈正道</p>
     <p>主演：黄渤/秦海璐/林志玲/高以翔</p>
     <p>片场：104分钟</p>
